fixed size for collapse example so it doesn't overflow

--- a/packages/docs-app/src/styles/_sections.scss
+++ b/packages/docs-app/src/styles/_sections.scss
@@ -25,6 +25,11 @@
   .docs-example {
     justify-content: unset;
   }
+
+  .#{$ns}-code-block {
+    width: $pt-grid-size * 40;
+    overflow: hidden;
+  }
 }
 
 #{example("NumericInputExtendedExample")} {
